Fix section spacing

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -1,6 +1,6 @@
 .contact
   min-height: 100vh
-  padding: 10vw 0
+  padding: 15vw 0
   +font-primary
   display: flex
   align-items: center
