--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -1,6 +1,7 @@
 .workflow
   display: flex
   min-height: 80vh
+  padding: 5vw 0
 
 .left,
 .right
